2018-04-30  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.5-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.5-alpha02: Mad Max';git push
	git tag -a 4.7.5-alpha02 -m 'dap4://;wht_lst_dap;';git push --tags

2018-04-27  Charlie Zender  <zender@uci.edu>

	* ncclimo accepts mpassi in place of mpascice, mpasseaice

	* Fix VERSION in Makefile.old

	* Improve Makefile.old for GSL and gsl-config

	* Update cheyenne to use netCDF 4.6.1 with ncremap/ncclimo

2018-04-20  Charlie Zender  <zender@uci.edu>

	* Allow separate whitelist of characters in DAP protocol constraints

	* Allow DAP URLs to begin with dap4://

2018-04-15  Charlie Zender  <zender@uci.edu>

	* Correct total variable number printed in CDL debug comment

	* Always read type information for non-atomic types

2018-04-14  Charlie Zender  <zender@uci.edu>

	* Add --ntm option to set prn_flg.ntm for development of non-atomic features

2018-04-13  Charlie Zender  <zender@uci.edu>

	* Find non-atomic types in nco_prn_cdl_trd()

	* Create vlen.cdl and enum.cdl to test non-atomic types

2018-04-12  Charlie Zender  <zender@uci.edu>

	* Improve English usage in ncrename HINT

2018-04-06  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.5-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.5-alpha01: Giant\'s Causeway';git push
	git tag -a 4.7.5-alpha01 -m 'Functionally identical to 4.7.4';git push --tags

	* NCO 4.7.4 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.4: CSSI';git push
	git tag -a 4.7.4 -m 'CF OOG; CDF5 fix; support ESMF 7.1.0r conserve2nd, extrapolation; prn S5P L1B/L2; fix whitelist; enm/vln stubs';git push --tags

	* ncclimo: add mdl_nm = mpasseaice as synonym to mpascice

2018-04-04  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.4-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.4-beta01: Ireland';git push
	git tag -a 4.7.4-beta01 -m 'elm/ctsm synonyms, revert ignore_degenerate';git push --tags
